# Chinese-Chess_Xiangqi

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
.claude/plans/: ai-vs-chatgpt-deep-research-docs-ai-dee-typed-stonebraker.md  banqi-move-graceful-thompson.md  confetti-tui-kind-firefly.md  https-daviddwlee84-github-io-chinese-ch-imperative-sun.md  image-3-tui-menu-ux-drifting-flask.md  magical-honking-book.md  rust-wasm-pwa-mobile-streamed-wall.md  tui-magical-rabbit.md  ux-bug-vivid-meerkat.md  web-gentle-island-agent-a0c0196361eee6786.md  web-gentle-island.md  web-sunny-badger.md
.github/workflows/: ci.yml  pages.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-05-06_02-35-05Z-module-local-front-end.md  2026-05-07_01-43-21Z-https-github-com-daviddwlee84.md  2026-05-07_02-30-43Z-web-tui-websocket-svg.md  2026-05-07_06-59-49Z.md  2026-05-07_07-36-06Z.md  2026-05-07_08-42-09Z.md  2026-05-07_12-45-28Z-image-hash-3-tui.md  2026-05-07_13-23-54Z-n.md  2026-05-07_13-33-17Z-project-deploy.md  2026-05-07_15-43-58Z-web-user-wasm-loading.md  2026-05-07_15-52-23Z-web-online-github-page.md  2026-05-08_14-23-32Z-ai-vs-chatgpt-deep.md  2026-05-10_04-44-58Z-rust-wasm-pwa-mobile.md  2026-05-14_05-43-00Z-https-daviddwlee84-github-io.md  2026-05-14_10-08-28Z-pwa-home-page-david.md  2026-05-14_10-21-24Z.md  2026-05-14_12-39-41Z-resume.md
backlog/: README.md  ai-opening-book.md  ai-pondering.md  ai-winrate-display.md  chess-ai-search.md  chess-net-chat-moderation.md  chess-net-evalbar.md  chess-net-protocol.md  chess-net-system-messages.md  promote-client-shared.md  rust-toolchain-pin.md  threat-highlight-feature.md  three-kingdoms-banqi.md  web-ingame-rules-modal.md  web-playwright.md  web-wasm-download-progress.md  web-ws-reconnect.md  webrtc-lan-pairing-qr.md  webrtc-lan-pairing.md
clients/chess-cli/: Cargo.toml
clients/chess-cli/src/: main.rs
clients/chess-tui/: Cargo.toml
clients/chess-tui/src/: app.rs  banner.rs  confetti.rs  eval.rs  glyph.rs  input.rs  main.rs  net.rs  orient.rs  text_input.rs  ui.rs  url.rs
clients/chess-web/: Cargo.toml  Trunk.toml  build.rs  index.html  style.css
clients/chess-web/public/: manifest.webmanifest.tmpl  pwa.js  sw.js.tmpl
clients/chess-web/scripts/: build-pwa.sh  regenerate-placeholder-icons.sh  serve-spa.py
clients/chess-web/src/: app.rs  beforeunload.rs  camera.rs  config.rs  eval.rs  glyph.rs  host_room.rs  lib.rs  net_diag.rs  orient.rs  prefs.rs  qr_decode.rs  routes.rs  state.rs  time.rs  ws.rs
clients/chess-web/src/components/: board.rs  captured.rs  chat_panel.rs  confetti.rs  debug_panel.rs  end_overlay.rs  eval_bar.rs  eval_chart.rs  mod.rs  move_history.rs  pwa.rs  qr.rs  qr_scanner.rs  sidebar.rs  ws_setup.rs
clients/chess-web/src/pages/: lan.rs  lobby.rs  local.rs  mod.rs  picker.rs  play.rs
clients/chess-web/src/spike/: lan_echo.rs  mod.rs  rtc.rs
clients/chess-web/src/transport/: mod.rs  webrtc.rs  ws.rs
crates/chess-ai/: Cargo.toml
crates/chess-ai/src/: lib.rs
crates/chess-ai/src/engines/: mod.rs
crates/chess-ai/src/eval/: material_king_safety_pst_v3.rs  material_pst_v2.rs  material_v1.rs  mod.rs
crates/chess-ai/src/search/: mod.rs  ordering.rs  quiescence.rs  tt.rs  v5.rs
crates/chess-ai/tests/: perf.rs
crates/chess-core/: Cargo.toml
crates/chess-core/src/: coord.rs  error.rs  lib.rs  moves.rs  piece.rs  prelude.rs  replay.rs  setup.rs  snapshot.rs  view.rs
crates/chess-core/src/board/: grid.rs  mod.rs  shape.rs  zones.rs
crates/chess-core/src/eval/: mod.rs  see.rs
crates/chess-core/src/notation/: iccs.rs  mod.rs
crates/chess-core/src/rules/: banqi.rs  house.rs  mod.rs  three_kingdom.rs  xiangqi.rs
crates/chess-core/src/state/: history.rs  mod.rs  repetition.rs  turn_order.rs  zobrist.rs
crates/chess-core/tests/: banqi_basic.rs  banqi_chain_mode.rs  banqi_dark_capture.rs  banqi_first_flip_color.rs  banqi_horse_diagonal.rs  banqi_house_chain.rs  captured_pieces.rs  casual_xiangqi.rs  end_conditions.rs  replay_round_trip.rs  view_projection.rs  xiangqi_perft.rs
crates/chess-core/tests/fixtures/banqi/: red-wiped-out.pos
crates/chess-core/tests/fixtures/xiangqi/: horse-stalemate.pos  three-chariot-mate.pos
crates/chess-engine/: Cargo.toml
crates/chess-engine/src/: lib.rs
crates/chess-net/: Cargo.toml
crates/chess-net/src/: lib.rs  protocol.rs  room.rs  server.rs
crates/chess-net/tests/: banqi_first_flip.rs  protocol_roundtrip.rs  room_lifecycle.rs  server_smoke.rs  spectator_chat.rs  static_serve.rs
docs/: ai-deep-research-report.md  architecture.md  lan-multiplayer-webrtc.md  notation.md  pwa.md  snapshot-format.md  trunk-leptos-wasm.md
docs/adr/: 0001-rust-workspace-layout.md  0002-square-as-u16.md  0003-ruleset-as-data-not-trait.md  0004-player-view-projection.md  0005-multi-room-lobby.md  0006-chess-net-spectators-chat.md  0007-spectator-check-flag.md  0008-engine-chain-lock.md  README.md
docs/ai/: README.md  perf.md  v1-material.md  v2-material-pst.md  v3-king-safety-pst.md  v4-quiescence-mvv-lva.md  v5-id-tt.md  win-rate.md
docs/rules/: banqi-house.md  banqi.md  three-kingdoms.md  xiangqi.md
pitfalls/: README.md  ai-search-depth-setting-shows-depth-4.md  alpha-beta-root-score-pollution.md  casual-xiangqi-king-blindness.md  clippy-version-drift-local-vs-ci.md  eval-sample-stale-analysis-race.md  github-actions-floating-major-tag-missing.md  ios-safari-svg-click-no-tap.md  leptos-create-effect-inside-spawn-local-silent-gc.md  leptos-effect-tracking-stale-epoch.md  leptos-router-base-trailing-slash.md  leptos-rwsignal-queue-self-clear-race.md  leptos-select-prop-value-vs-prop-selected.md  pwa-base-path-and-stale-cache.md  pwa-local-serve-spa-fallback.md  trunk-proxy-route-conflict.md  wasm-getrandom-unresolved-imp.md  wasm32-systemtime-now-panics.md  webrtc-mdns-lan-ap-isolation.md  webrtc-set-remote-description-resolves-before-dc-open.md
scripts/: gen-chess-web-og.py  play-lobby.sh  play-local.sh  play-spectator.sh  play-web.sh  test-lan-pairing.sh
xtask/: Cargo.toml
xtask/src/: main.rs
