[package]
name        = "xtask"
description = "Project automation tasks. Stub for a follow-up PR."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "xtask"
path = "src/main.rs"
