[package]
name        = "chess-tui"
description = "ratatui frontend for chess-core."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "chess-tui"
path = "src/main.rs"

[dependencies]
chess-core = { path = "../../crates/chess-core" }
ratatui    = "0.29"
crossterm  = "0.28"
clap       = { version = "4.5", features = ["derive"] }
anyhow     = "1.0"
