[package]
name        = "chess-tui"
description = "ratatui frontend for chess-core."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "chess-tui"
path = "src/main.rs"

[dependencies]
chess-core  = { path = "../../crates/chess-core" }
chess-ai    = { path = "../../crates/chess-ai" }
chess-net   = { path = "../../crates/chess-net" }
ratatui     = "0.29"
crossterm   = "0.28"
clap        = { workspace = true }
anyhow      = { workspace = true }
serde_json  = { workspace = true }
tungstenite = { workspace = true }
