[package]
name        = "chess-web"
description = "Leptos + WASM frontend for chess-core. SPA — local pass-and-play and online play via chess-net."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]

# Native (cargo check --workspace) sees a tiny lib + the pure-logic modules
# (orient, glyph, routes, state). Leptos and the browser-only deps are
# wasm32-gated so the workspace check passes. chess-net is pulled in with
# `default-features = false` so axum/tokio do NOT end up in the WASM bundle.
[dependencies]
chess-core = { path = "../../crates/chess-core" }
chess-ai   = { path = "../../crates/chess-ai" }
serde      = { workspace = true }
serde_json = { workspace = true }
chess-net  = { path = "../../crates/chess-net", default-features = false }

[dev-dependencies]
smallvec = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos        = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen  = "0.2"
wasm-bindgen-futures = "0.4"
web-sys       = { version = "0.3", features = [
    "Window", "Location", "Storage", "KeyboardEvent", "Event", "EventTarget",
    "Navigator", "CustomEvent", "Performance",
    # `BeforeUnloadEvent` for Phase 6 host-tab-close confirm.
    "BeforeUnloadEvent",
    # WebRTC spike — backlog/webrtc-lan-pairing.md Phase 0
    "RtcPeerConnection", "RtcConfiguration", "RtcSdpType",
    "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcPeerConnectionIceEvent", "RtcIceCandidate", "RtcIceCandidateInit",
    "RtcIceConnectionState", "RtcIceGatheringState",
    "RtcSignalingState", "RtcPeerConnectionState",
    "MessageEvent",
    "HtmlTextAreaElement", "HtmlInputElement",
    "HtmlScriptElement",
    "Clipboard",
    # Camera capture for QR scanning (Phase 5.5).
    "MediaDevices", "MediaDeviceInfo", "MediaDeviceKind",
    "MediaStream", "MediaStreamConstraints", "MediaStreamTrack",
    "HtmlVideoElement", "HtmlCanvasElement",
    "CanvasRenderingContext2d", "ImageData",
] }
js-sys        = "0.3"
gloo-net      = { version = "0.6", default-features = false, features = ["websocket"] }
# QR code generation for LAN-pairing offer/answer SDPs (Phase 5.5).
# Pure Rust; SVG output embedded inline. ~30 KB to the wasm bundle.
# `default-features = false` skips PNG / image dependencies — we only
# emit SVG, so we don't need the image stack.
qrcode        = { version = "0.14", default-features = false, features = ["svg"] }
gloo-timers   = { version = "0.3", features = ["futures"] }
futures-util  = { workspace = true }
futures       = "0.3"
