[package]
name        = "chess-ai"
description = "Heuristic and ISMCTS for banqi. Stub — implemented in a follow-up PR."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
chess-core   = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
