[package]
name        = "chess-ai"
description = "Lightweight alpha-beta search engine for xiangqi. MVP — see plan."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
chess-core  = { path = "../chess-core" }
rand        = { workspace = true }
rand_chacha = { workspace = true }
