[package]
name        = "chess-engine"
description = "Search and evaluation. Stub — implemented in a follow-up PR."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
chess-core = { path = "../chess-core" }
