[package]
name        = "chess-net"
description = "Wire protocol between server and clients. Stub — implemented in a follow-up PR."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
chess-core = { path = "../chess-core" }
