[package]
name        = "chess-net"
description = "Wire protocol + axum websocket server for chess-core. Multi-room. Default features include the server; `default-features = false` exposes the protocol types only (e.g. for WASM clients)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
name = "chess_net"
path = "src/lib.rs"

[[bin]]
name = "chess-net-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
default = ["server", "static-serve"]
# Enables axum/tokio/clap and the `server` module. Off by default for
# wasm32 consumers (chess-web) that only need the protocol types.
server = ["dep:tokio", "dep:axum", "dep:futures-util", "dep:clap", "dep:anyhow"]
# Enables `--static-dir` static-file serving (tower-http ServeDir). When the
# binary is started with `--static-dir <path>`, chess-net serves that
# directory as the route fallback. Useful for serving the chess-web `dist/`
# build alongside the WS endpoints in production.
static-serve = ["server", "dep:tower", "dep:tower-http"]

[dependencies]
chess-core   = { path = "../chess-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
# `HostColor::Random` resolves to a concrete Side using ChaCha8Rng
# (deterministic when seeded with the room's banqi seed). Native and
# wasm32 targets both compile this in — chess-core already pins these
# crates and `getrandom = ["js"]` for wasm.
rand         = { workspace = true }
rand_chacha  = { workspace = true }
anyhow       = { workspace = true, optional = true }
tokio        = { workspace = true, optional = true }
axum         = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
clap         = { workspace = true, optional = true }
tower        = { version = "0.5", optional = true }
tower-http   = { version = "0.5", features = ["compression-br", "compression-gzip", "fs"], optional = true }

# wasm32 consumers (chess-web's `host_room.rs` running `Room` in-browser
# for LAN multiplayer) need a non-`SystemTime` source for chat
# timestamps — `std::time::SystemTime::now()` panics on wasm32 with
# "time not implemented on this platform". `js_sys::Date::now()` is
# the wasm-friendly equivalent. Native targets don't pull this in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tempfile = "3"
tungstenite = { workspace = true }
